--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
 <script language="javascript" type="text/javascript" src="assets/library/p5.min.js"></script>
 <script language="javascript" type="text/javascript" src="assets/library/p5.sound.min.js"></script>
 
+<link rel="stylesheet" href="assets/css/circles.css">
+
 <script language="javascript" type="text/javascript" src="circles.js"></script>
+<script language="javascript" type="text/javascript" src="variations-on-circles.js"></script>
 
 </head>
 <body>
+  <button style="cursor:pointer" title="click to change mode, click and drag circles to play" onclick="nextCircles()" class="shuffle">↬</button> <!-- ⇝ -->
 </body>
 </html>
